# template_login_fastapi

backend/: poetry.toml  pyproject.toml
backend/app/: database.db  main.py
backend/app/api/: config_api.py  deps.py
backend/app/api/routes/: user.py
backend/app/core/: config.py  security.py
backend/app/db/: engine.py
backend/app/models/: user.py
backend/app/service/: user.py
frontend/: .env  package-lock.json  package.json  tailwind.config.ts
frontend/public/: logo.png:Zone.Identifier
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/auth/[... nextauth]/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/components/: Form.tsx
