[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["BrunoBorges12 <brunoamix084@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.105.0"}
sqlmodel = "^0.0.14"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
